<resources>
    <string name="app_name">Numerator</string>
    <string name="start">Start</string>
    <string name="about">About</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_game">Game</string>
    <string name="end">Completed</string>
    <string name="Time">Time</string>
    <string name="Sec">Sec.</string>
    <string name="ColorCheck">Color enable</string>
    <string name="HideCheck">Hide pressed</string>
    <string name="RotationCheck">Rotate</string>
    <string-array name="Lines">
        <item>1 </item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>
    <string name="Lines">Lines</string>
    <string-array name="Hint">
        <item>3</item>
        <item>5</item>
        <item>7</item>
        <item>10</item>
    </string-array>
    <string name="HintCheck">Hint enabled</string>
</resources>
