<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.home.nocrail.numerator.MainActivity">

    <CheckBox
        android:id="@+id/checkHint"
        android:layout_width="157dp"
        android:layout_height="34dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/HintCheck"
        android:textSize="17sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/start"
        android:layout_width="390dp"
        android:layout_height="63dp"
        android:text="@string/start"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="32dp"
        app:layout_constraintVertical_bias="0.82"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <Button
        android:id="@+id/about"
        android:layout_width="390dp"
        android:layout_height="63dp"
        android:layout_marginBottom="32dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/about"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/start"
        app:layout_constraintVertical_bias="0.0"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <CheckBox
        android:id="@+id/HideCheck"
        android:layout_width="190dp"
        android:layout_height="34dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/HideCheck"
        android:textSize="17sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ColorCheck"
        android:layout_marginStart="8dp" />

    <CheckBox
        android:id="@+id/ColorCheck"
        android:layout_width="190dp"
        android:layout_height="34dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/ColorCheck"
        android:textSize="17sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="8dp" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="174dp"
        android:layout_height="36dp"
        android:layout_marginRight="75dp"
        android:entries="@array/Lines"
        android:textAlignment="center"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/textView"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@+id/HideCheck"
        android:layout_marginEnd="75dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="94dp"
        android:layout_height="36dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:text="@string/Lines"

        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/HideCheck" />

    <Spinner
        android:id="@+id/hinttimespin"
        android:layout_width="116dp"
        android:layout_height="34dp"
        android:layout_marginLeft="0dp"
        android:entries="@array/Hint"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toRightOf="@+id/checkHint"
        app:layout_constraintTop_toBottomOf="@+id/spinner" />

</android.support.constraint.ConstraintLayout>
